feat: support replication initialization from backups